# libmem

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  package.json
include/: mem.h
src/: mem.c
test/: CMakeLists.txt  arena.c  basic.c  map.c
